--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,11 +6,10 @@
 @import "components/body-grid";
 @import "components/top-menu";
 @import "components/first-section";
-// @import "components/second-section";
-// @import "components/third-section";
-// @import "components/fourth-section";
-// @import "components/fifth-section";
-// @import "components/sixth-section";
-// @import "components/seventh-section";
-// @import "components/eighth-section";
-// @import "components/footer";
+@import "components/second-section";
+@import "components/third-section";
+@import "components/fourth-section";
+@import "components/fifth-section";
+@import "components/sixth-section";
+@import "components/seventh-section";
+@import "components/footer";
