--- a/scss/components/body-grid.scss
+++ b/scss/components/body-grid.scss
@@ -8,3 +8,9 @@
     grid-template-rows: auto;
     column-gap: 20px;
 }
+
+@media (min-width: 1400px) {
+    .grid {
+        // background-color: red;
+    }
+}
