--- a/scss/components/sixth-section.scss
+++ b/scss/components/sixth-section.scss
@@ -1,28 +1,102 @@
-.sixthSec-img {
-    grid-column: 3/7;
-    grid-row: 13/15;
-    align-self: end;
-}
-
-.sixthSec-texts-wrapper {
-    grid-column: 5/12;
-    grid-row: 13/14;
-    align-self: end;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-left: 9%;
-    h4 {
-        line-height: 60px;
-        font-family: $bw-extra-bold;
-        font-size: 50px;
-        color: #FFF;
-        margin-bottom: 50px;
-        display: block;
+.sixthSec {
+    grid-column: 5/9;
+    grid-row: auto;
+    align-self: center;
+    text-align: center;
+    background-color: #424141;
+    padding: 2.083vw 2.344vw;
+    .sixthSec-box-title-wrapper {
+        h5 {
+            font-family: $bw-regular;
+            font-size: 1.875vw;
+            text-align: center;
+            color: #FFFC00;
+        }
+        hr {
+            width: 75%;
+            border: none;
+            border: 1px solid #505050;
+            text-align: center;
+            margin: 2.083vw auto;
+            
+        }
     }
-    span {
-        font-size: 23px;
-        font-family: $bw-light;
-        color: #FFFC00;
+    .sixthSec-valor-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .sixthSec-valor-subtext {
+            font-size: 0.990vw;
+            font-family: $bw-light;
+            color: #FFF;
+            text-align: center;
+            margin-bottom: 1.406vw;
+        }
+        div {
+            display: flex;
+            align-items: center;  
+            margin-bottom: 3.125vw;
+            span {
+                &:nth-child(1) {
+                    font-size: 1.771vw;
+                    font-family: $bw-black;
+                    color: #FFFC00;
+                    display: block;
+                    height: 2.604vw;
+                    margin-right: 2.302vw;
+                }
+                &:nth-child(2) {
+                    font-size: 5.313vw;
+                    font-family: $bw-bold;
+                    color: #FFF;
+                }
+            }
+        }
+    }
+    .sixthSec-valor-vista-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .sixthSec-valor-vista-subtext {
+            font-size: 0.990vw;
+            font-family: $bw-light;
+            color: #FFF;
+            text-align: center;
+            margin-bottom: 0.938vw;
+        }
+        div {
+            display: flex;
+            align-items: center;  
+            margin-bottom: 1.083vw;
+            span {
+                &:nth-child(1) {
+                    font-size: 0.781vw;
+                    font-family: $bw-black;
+                    color: #FFFC00;
+                    display: block;
+                    height: 1.042vw;
+                    margin-right: 0.417vw;
+                }
+                &:nth-child(2) {
+                    font-size: 1.406vw;
+                    font-family: $bw-light;
+                    color: #FFF;
+                }
+            }
+        }
+    }
+    button {
+        margin: 1.604vw auto;
+        background-color: #FFFC00;
+        color: #000;
+        font-family: $bw-black;
+        font-size: 1.219vw;
+        width: 75%;
+        text-transform: uppercase;
+        border: none;
+        border-radius: 3%;
+        padding: 3% 0;
+        box-shadow: 0 0 10px #fffc00;
+        cursor: pointer;
     }
 }
